Update: Altered Java script to correct the nav behaviour(was collapsing when trying to toggle dropdown, also fixed collapse and scroll behaviour

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,3 +83,13 @@ li {
     border: 2px solid var(--color-dark);
 }
 
+.sect {
+  scroll-margin-top: 180px;
+  }
+ 
+ 
+ .help {
+  scroll-margin-top: 110px;
+ }
+ 
+
